<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="143dp"
        android:layout_height="123dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/k"
        tools:ignore="ImageContrastCheck" />

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="206dp"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="213dp"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="271dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv">

        <CheckBox
            android:id="@+id/ch1"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calificaciones"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ch2"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mis_productos"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Charge"
            android:text="@string/cargar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="Menu"
            android:text="@string/menu"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>